--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="libs/commons-lang3-3.1.jar"/>
 	<classpathentry kind="lib" path="libs/joda-time-2.1.jar"/>
+	<classpathentry kind="lib" path="libs/actionbarsherlock-plugin-maps-4.0.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
