--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.alpha.focus2012"
-      android:versionCode="2"
-      android:versionName="1.2" xmlns:android="http://schemas.android.com/apk/res/android">
+      android:versionCode="3"
+      android:versionName="1.3" xmlns:android="http://schemas.android.com/apk/res/android">
     
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -29,7 +29,7 @@
         <uses-library android:required="true" android:name="com.google.android.maps" />
         
         <activity android:name=".twitter.TwitterActivity"></activity>
-        <!--  <activity android:name=".more.VideoActivity"></activity> -->
+        <activity android:name=".more.VideoActivity"></activity>
         <activity android:name=".speakers.SpeakerDetailActivity"></activity>
         <activity android:name=".diary.SeminarOptionsActivity"></activity>
         <activity android:name=".diary.SessionDetailActivity"></activity>
